--- a/client/home.jade
+++ b/client/home.jade
@@ -61,16 +61,17 @@ template(name='subs')
                         unless subreddit_docs.count
                             .ui.center.aligned.basic.segment
                                 i.massive.reddit.grey.loading.icon
-                        .ui.relaxed.items
+                        .ui.centered.five.cards
                             each subreddit_docs
                                 +subreddit_doc
-                                .spacer
+                                // .spacer
 
 
 template(name='subreddit_doc')
-    a.item.rounded.zoomer(style="background-image:url(#{data.banner_img});, background-size:cover; background-repeat: no-repeat; min-width: 100%;" href="https://www.reddit.com/r/#{data.display_name}" target="_window")
+    // a.card.rounded.zoomer(style="background-image:url(#{data.banner_img});, background-size:cover; background-repeat: no-repeat; min-width: 100%;" href="https://www.reddit.com/r/#{data.display_name}" target="_window")
+    a.card.rounded.zoomer(style="background-image:url(#{data.banner_img});, background-size:cover; background-repeat: no-repeat;" href="https://www.reddit.com/r/#{data.display_name}" target="_window")
         // a.ui.tiny.image.goto_sub(href="/r/#{data.display_name}")
-        .ui.tiny.image.goto_sub.zoomer
+        .ui.image.goto_sub.zoomer
             img.ui.zoomer.tiny.rounded.image(src=data.icon_img)
         .content.seg.zoomer
             .ui.zoomer.header.goto_sub(style="color:#{data.primary_color}")
@@ -109,7 +110,7 @@ template(name='unpick_tag')
 
 template(name='tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    a.ui.image.large.circular.basic.label.zoomer.pick_tag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    a.ui.image.large.circular.basic.label.zoomer.pick_tag.invert(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
