checkpoint organizing reddit world

--- a/parts/reddit/rpage.jade
+++ b/parts/reddit/rpage.jade
@@ -1,4 +1,4 @@
-template(name='reddit_page')
+template(name='rpage')
     with current_doc
         .ui.stackable.grid
             .twelve.wide.column
