--- a/parts/reddit/subs.jade
+++ b/parts/reddit/subs.jade
@@ -1,12 +1,7 @@
-
-
-        
-            
-            
 template(name='subs')
     .ui.stackable.padded.grid
         .row
-            unless picked_tags
+            unless picked_subtags
                 .sixteen.wide.center.aligned.column
                     // .ui.inline.header 
                     //     i.reddit.icon
@@ -15,33 +10,33 @@ template(name='subs')
                         i.search.icon
                         input.search_subreddits(type='text' placeholder=sub_count autofocus='')
                     each subreddit_tags
-                        +tag_picker
+                        +subtag_picker
                         // .ui.label #{this}
                         // a.zoomer.ui.compact.button.pick_sub_tag(title=count) #{name}
                     // if skv_is 'nsfw' false
                     //     +skve k='nsfw' v=true l='safe'
                     // else if skv_is 'nsfw' true
                     //     +skve k='nsfw' v=false l='nsfw'
-            if picked_tags
+            if picked_subtags
                 .sixteen.wide.column
                     // .ui.inline.header #{sub_count}
                     // i.reddit.big.icon
                     // .ui.inline.header.search_subs
                     //     |#{subreddit_docs.count} subs
                     // .smallscroll
-                    if picked_tags
+                    if picked_subtags
                         // if many_tags
                         //     a#clear_tags.ui.black.invert.icon.compact.button.select_term
                         //         i.remove.icon
-                        each picked_tags
-                            +unpick_tag
+                        each picked_subtags
+                            +unpick_subtag
                             // .ui.black.button.unpick_sub_tag #{this}
                     // if multiple_results
                     .ui.icon.input
                         i.search.icon
                         input.search_subreddits(type='text' placeholder=sub_count autofocus='')
                     each subreddit_tags
-                        +tag_picker
+                        +subtag_picker
                         // .ui.label #{this}
                         // a.zoomer.ui.compact.small.button.pick_sub_tag(title=count) #{name}
                     // .sixteen.wide.column
@@ -111,7 +106,7 @@ template(name='subreddit_doc')
             //     +remove_button
 
 
-template(name='unpick_tag')
+template(name='unpick_subtag')
     a.unpick.ui.image.large.label.black.button(href='#')
         if term
             if term.watson.metadata.image
@@ -119,7 +114,7 @@ template(name='unpick_tag')
         strong #{this}
 
 
-template(name='tag_picker')
+template(name='subtag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
     a.ui.image.large.label.zoomer.pick_tag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
