round of stack updates with working site dl and q search and q view

--- a/client/home.jade
+++ b/client/home.jade
@@ -2,6 +2,9 @@ template(name='home')
     .ui.stackable.padded.grid
         .sixteen.wide.column
             a.ui.icon.header(href='/reddit')
+                i.searchs.icon
+                |search
+            a.ui.icon.header(href='/subs')
                 i.reddit.icon
                 |reddit
                 
