--- a/parts/stack/client/site.jade
+++ b/parts/stack/client/site.jade
@@ -5,7 +5,7 @@ template(name='sq')
         .ui.stackable.grid
             .row
                 .ui.sixteen.wide.column
-                    img.ui.get_info.shadowed.ui.inline.image(src=logo_url )
+                    img.ui.get_site_info.shadowed.ui.inline.image(src=logo_url )
                     if picked_tags
                         // if many_tags
                         //     a#clear_tags.ui.black.invert.icon.compact.button.select_term
