--- a/parts/client/nav.jade
+++ b/parts/client/nav.jade
@@ -10,6 +10,8 @@ template(name='nav')
         a.icon.item.blink.clear(href="/love" class="{{isActiveRoute 'love'}}")
             i.heart.outline.large.icon
         a.icon.item.blink.clear(href="/reddit" class="{{isActiveRoute 'reddit'}}")
+            i.search.large.icon
+        a.icon.item.blink.clear(href="/subs" class="{{isActiveRoute 'subs'}}")
             i.reddit.large.icon
         a.icon.item.blink.clear(href="/stack" class="{{isActiveRoute 'stack'}}")
             i.stack.exchange.large.icon
