--- a/parts/stack/client/stack.jade
+++ b/parts/stack/client/stack.jade
@@ -2,7 +2,7 @@ template(name='stack')
     .ui.stackable.padded.grid
         .row
             .sixteen.wide.center.aligned.column
-                .ui.inline.header 
+                .ui.inline.header.get_sites
                     i.big.stack.exchange.icon
                     |stackexchange sites
                 .ui.icon.input
